--- a/index2_art.html
+++ b/index2_art.html
@@ -283,11 +283,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_33.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_47.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="./index2_art.html">娛樂/電影</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">侯孝賢登紐時 被譽「台灣最偉大電影人」</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">侯孝賢登紐時 被譽「台灣最偉大電影人」</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -315,6 +315,30 @@
                                                 <div class="trends_category"><a href="#">娛樂/歐美</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">女神卡卡攜手亞莉安娜 新歌MV日破1600萬人次觀看</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_45.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">專訪／陳郁秀為貝多芬拾琴鍵 公廣集團董座的浪漫與理性</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_46.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">橫掃奧斯卡5項大獎！睽違29年影史上驚悚鉅作《沉默的羔羊》4K修復版重返大螢幕</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
