--- a/index2_money.html
+++ b/index2_money.html
@@ -266,11 +266,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_8.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_8.jpg" alt=""></a></div>
                                             <div class="trends_content">
                                                 <div class="trends_category"><a href="#">財經/房地產</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -320,15 +320,37 @@
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_53.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">財經/投資理財</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">小資族「月薪理財術」 基金獲利比定存多十倍？</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_54.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">財經/股市匯市</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">快新聞／投資人看好經濟重啟前景 美股開盤上漲239點</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    
-   
+        </div>     
     </div>
 
     <!-- Copyright -->
