--- a/index2_sport.html
+++ b/index2_sport.html
@@ -249,17 +249,13 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_9.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_50.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">運動/棒球</a></div>
+                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
                                                 </div>
                                             </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
@@ -268,7 +264,7 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_26.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">運動/網球</a></div>
+                                                <div class="trends_category"><a href="#">體育/網球</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">網球防疫盃／單、雙都闖決賽 混血美少女收一冠一亞</a></div>
                                                 </div>
@@ -285,7 +281,7 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_27.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">運動/棒球</a></div>
+                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">中職／索沙8局神封鎖 悍將痛擊兄弟</a></div>
                                                 </div>
@@ -310,11 +306,35 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_28.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_28.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">運動/籃球</a></div>
+                                                <div class="trends_category"><a href="./index2_sport.html">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_48.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">體育/網球</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">頭號種子曾俊欣晉級八強 劉少凡國體內戰勝李冠毅</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_49.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">中職／獅隊本季首度有投手投滿7局 林岳平盼洋投也能有所發揮</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
