--- a/index3_money.html
+++ b/index3_money.html
@@ -347,9 +347,9 @@
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
                                                 <div class="advert_title"><a href="#">財經/房地產</a></div>
-                                                <div class="advert_text"><a href="#">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
+                                                <div class="advert_text"><a href="./correct3.html">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_8.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct3.html"><img src="images/yahoo/new_p_8.jpg" alt=""></a></div></div>
                                         </div>
                                     </div>
                                      <div class="col-lg-12 advert_col">
@@ -368,6 +368,24 @@
                                                 <div class="advert_text"><a href="#">把握最後時間！想6月底拿到退稅款　網路報稅期間僅到明天</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_24.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">財經/投資理財</a></div>
+                                                <div class="advert_text"><a href="#">小資族「月薪理財術」 基金獲利比定存多十倍</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_53.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">財經/股市匯市</a></div>
+                                                <div class="advert_text"><a href="#">快新聞／投資人看好經濟重啟前景 美股開盤上漲239點</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_54.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
