--- a/index4_art.html
+++ b/index4_art.html
@@ -280,10 +280,10 @@
                                      <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">娛樂/電影</a></div>
-                                                <div class="advert_text"><a href="#">侯孝賢登紐時 被譽「台灣最偉大電影人」</a></div>
+                                                <div class="advert_title"><a href="/index4_art.html">娛樂/電影</a></div>
+                                                <div class="advert_text"><a href="./correct4.html">侯孝賢登紐時 被譽「台灣最偉大電影人」</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_33.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct4.html"><img src="images/yahoo/new_p_47.jpg" alt=""></a></div></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 advert_col">
@@ -293,6 +293,24 @@
                                                 <div class="advert_text"><a href="#">女神卡卡攜手亞莉安娜 新歌MV日破1600萬人次觀看</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_34.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">娛樂/影視名人</a></div>
+                                                <div class="advert_text"><a href="#">專訪／陳郁秀為貝多芬拾琴鍵 公廣集團董座的浪漫與理性</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_45.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">娛樂/電影</a></div>
+                                                <div class="advert_text"><a href="#">睽違29年影史上驚悚鉅作《沉默的羔羊》4K修復版重返大螢幕</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_46.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
