--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									</li>
 									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="./index_sport.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
