--- a/index4.html
+++ b/index4.html
@@ -187,7 +187,7 @@
 				            <li class="hassubs"><a href="../News/index4_sport.html">體育<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
-                                    <li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+                                    <li><a href="./index4_sport.html">籃球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
