--- a/index4_location.html
+++ b/index4_location.html
@@ -262,10 +262,10 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">地方/中部離島</a></div>
-                                                <div class="advert_text"><a href="#">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
+                                                <div class="advert_title"><a href="./index4_location.html">地方/中部離島</a></div>
+                                                <div class="advert_text"><a href="./correct4.html">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_7.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct4.html"><img src="images/yahoo/new_p_7.jpg" alt=""></a></div></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 advert_col">
@@ -293,6 +293,24 @@
                                                 <div class="advert_text"><a href="#">雲林花生腐壞水稻空炮彈 蘇治芬盼政府救助</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_23.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                     <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">地方/中部離島</a></div>
+                                                <div class="advert_text"><a href="#">台電南投區抓偷電賊 5月追償430萬元創3年新高</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_51.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">地方/中部離島</a></div>
+                                                <div class="advert_text"><a href="#">澎湖火燒基地台 白煙竄天3工人急逃命</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_52.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
