--- a/index4_sport.html
+++ b/index4_sport.html
@@ -254,7 +254,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp運動</a></div>
+                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp體育</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
@@ -262,7 +262,7 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">運動/棒球</a></div>
+                                                <div class="advert_title"><a href="#">體育/棒球</a></div>
                                                 <div class="advert_text"><a href="#">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_9.jpg" alt=""></div></div>
@@ -271,7 +271,7 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">運動/網球</a></div>
+                                                <div class="advert_title"><a href="#">體育/網球</a></div>
                                                 <div class="advert_text"><a href="#">網球防疫盃／單、雙都闖決賽 混血美少女收一冠一亞</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_26.jpg" alt=""></div></div>
@@ -280,7 +280,7 @@
                                      <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">運動/棒球</a></div>
+                                                <div class="advert_title"><a href="#">體育/棒球</a></div>
                                                 <div class="advert_text"><a href="#">中職／索沙8局神封鎖 悍將痛擊兄弟</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_27.jpg" alt=""></div></div>
@@ -289,10 +289,28 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">運動/籃球</a></div>
-                                                <div class="advert_text"><a href="#">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
+                                                <div class="advert_title"><a href="./index4_sport.html">體育/籃球</a></div>
+                                                <div class="advert_text"><a href="./correct4.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_28.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct4.html"><img src="images/yahoo/new_p_28.jpg" alt=""></a></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">體育/網球</a></div>
+                                                <div class="advert_text"><a href="#">頭號種子曾俊欣晉級八強 劉少凡國體內戰勝李冠毅</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_48.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">體育/棒球</a></div>
+                                                <div class="advert_text"><a href="#">中職／獅隊本季首度有投手投滿7局 林岳平盼洋投也能有所發揮</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_49.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
