--- a/index_location.html
+++ b/index_location.html
@@ -341,11 +341,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_7.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct.html"><img src="images/yahoo/new_p_7.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">地方/中部離島</a></div>
+                                                <div class="trends_category"><a href="./index_location.html">地方/中部離島</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
+                                                    <div class="trends_name"><a href="./correct.html">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -416,6 +416,34 @@
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_51.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">地方/中部離島</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">台電南投區抓偷電賊 5月追償430萬元創3年新高</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_52.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">地方/中部離島</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">澎湖火燒基地台 白煙竄天3工人急逃命</a></div>
+                                                </div>
+                                            </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">HOT</li>
+                                            </ul>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -424,83 +452,7 @@
             </div>
         </div>
     </div>
-    <!-- Banner -->
-	<div class="banner_2">
-		<div class="banner_2_background" style="background-image:url(images/banner_2_background.jpg)"></div>
-		<div class="banner_2_container">
-			<div class="banner_2_dots"></div>
-			<!-- Banner 2 Slider -->
-			<div class="owl-carousel owl-theme banner_2_slider">
-                <!-- Banner 2 Slider Item -->
-				<div class="owl-item">
-					<div class="banner_2_item">
-						<div class="container fill_height">
-							<div class="row fill_height">
-								<div class="col-lg-4 col-md-6 fill_height">
-									<div class="banner_2_content">
-										<div class="banner_2_category">政治</div>
-										<div class="banner_2_title">中華民國第15任總統、副總統就職典禮訂於5月20日舉行</div>
-										<div class="banner_2_text">中華民國第15任總統、副總統就職典禮訂於5月20日舉行，將在總統府的大禮堂進行宣誓典禮後，再前往台北賓館戶外廣場進行就職演說。</div>
-										<div class="button banner_2_button"><a href="#">點選全文</a></div>
-									</div>
-									
-								</div>
-								<div class="col-lg-8 col-md-6 fill_height">
-									<div class="banner_2_image_container">
-										<div class="banner_2_image"><img src="images/photo5.jpg" alt=""></div>
-									</div>
-								</div>
-							</div>
-						</div>			
-					</div>
-				</div>
-                <!-- Banner 2 Slider Item -->
-				<div class="owl-item">
-					<div class="banner_2_item">
-						<div class="container fill_height">
-							<div class="row fill_height">
-								<div class="col-lg-4 col-md-6 fill_height">
-									<div class="banner_2_content">
-										<div class="banner_2_category">財經</div>
-										<div class="banner_2_title">免結算申報標準大公開，年收40.8萬以下免繳稅</div>
-										<div class="banner_2_text">綜合所得稅結算申報已展開，今年申報期限至6月30日止，但薪資族可能也好奇年薪低於多少才不用繳稅？什麼情況下可以不用報稅？</div>
-										<div class="button banner_2_button"><a href="#">點選全文</a></div>
-									</div>									
-								</div>
-								<div class="col-lg-8 col-md-6 fill_height">
-									<div class="banner_2_image_container">
-										<div class="banner_2_image"><img src="images/photo4.jpg" alt=""></div>
-									</div>
-								</div>
-							</div>
-						</div>			
-					</div>
-				</div>				
-				<!-- Banner 2 Slider Item -->
-				<div class="owl-item">
-					<div class="banner_2_item">
-						<div class="container fill_height">
-							<div class="row fill_height">
-								<div class="col-lg-4 col-md-6 fill_height">
-									<div class="banner_2_content">
-										<div class="banner_2_category">國際</div>
-										<div class="banner_2_title">伊拉克、黎巴嫩、智利，為民生經濟怒吼</div>
-										<div class="banner_2_text" >2019年有很多國家的民生經濟困境，點燃了人民的怒火。</div>		
-										<div class="button banner_2_button"><a href="#">點選全文</a></div>
-									</div>									
-								</div>
-								<div class="col-lg-8 col-md-6 fill_height">
-									<div class="banner_2_image_container">
-										<div class="banner_2_image"><img src="images/photo1.jpg" alt=""></div>
-									</div>
-								</div>
-							</div>
-						</div>			
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	<!-- Copyright -->
 
 	<div class="copyright">
