--- a/index2.html
+++ b/index2.html
@@ -524,4 +524,6 @@
                     $('#row_1').addClass('col-md-2');
                 }
             });
+    var eTime =new Date(); 
+    alert("任務開始時間："+ eTime.getHours()+':'+eTime.getMinutes()+':'+eTime.getSeconds());
  </script>
