--- a/index3.html
+++ b/index3.html
@@ -535,3 +535,7 @@
 </body>
 
 </html>
+<script type="text/javascript">
+var eTime =new Date(); 
+    alert("任務開始時間："+ eTime.getHours()+':'+eTime.getMinutes()+':'+eTime.getSeconds());    
+</script>
